@@ -26,3 +26,4 @@ DirectInput
 	* Did some general code clean-up in DirectInput to better match recent changes in the library.
 	* Added support for effects.
 	* Added type specific parameters for effects.
+	* Added the ability to get image and object info from a device.
